fix(storage): harden atomic file replacement